libdocument: return 96 DPI if unable to determine true value

https://bugzilla.gnome.org/show_bug.cgi?id=719400